--- a/src/sass/blocks/_testimonials.scss
+++ b/src/sass/blocks/_testimonials.scss
@@ -1,5 +1,6 @@
 .testimonials {
     padding: 320px 15px;
+    overflow: hidden;
     @media (max-width:1024) {
         padding: 150px 15px;
     }
